# hygestat_BLESS

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
include/: barcodes_trimming.h  bowtie_alignments.h  btt.h  chromosome_extraction.h  compute_cytoband.h  compute_hypergeometric_tests.h  compute_hypergeometric_two_samples.h  compute_sequence_reads.h  count_hits_bless.h  count_hits_genomic.h  data_mapping_fastq.h  evaluate_mappability.h  flags_and_barcodes.h  flags_and_barcodes.h.save  header.h  hygestat.h  init_thread.h  process_fastq.h  rarefaction.h  read_config_file.h  sampling_btt_file.h  set_output.h  telomere_sequence.h  two_samples_hygeostat.h
src/: Makefile.in  barcodes_trimming.cpp  bowtie_alignments.cpp  btt.cpp  chromosome_extraction.cpp  compute_cytoband.cpp  compute_hypergeometric_tests.cpp  compute_hypergeometric_two_samples.cpp  compute_sequence_reads.cpp  count_hits_bless.cpp  count_hits_genomic.cpp  data_mapping_fastq.cpp  evaluate_mappability.cpp  hygestat_windows.cpp  init_thread.cpp  process_fastq.cpp  rarefaction.cpp  read_config_file.cpp  sampling_btt_file.cpp  set_output.cpp  telomere_sequence.cpp  two_samples_hygeostat.cpp
thirdPartyCodes/: Makefile.in
thirdPartyCodes/samstat-1.5.1/: Makefile  Makefile.in  config.status  configure
thirdPartyCodes/samstat-1.5.1/autom4te.cache/: output.0  requests  traces.0  traces.1
thirdPartyCodes/samstat-1.5.1/dev/: Makefile  Makefile.in
thirdPartyCodes/samstat-1.5.1/lib/: Makefile  Makefile.in
thirdPartyCodes/samstat-1.5.1/lib/.deps/: kslib.Po
thirdPartyCodes/samstat-1.5.1/src/: Makefile  Makefile.in  config.h  config.h.in  config.h.in~  samstat
thirdPartyCodes/samstat-1.5.1/src/.deps/: hmm.Po  interface.Po  io.Po  main.Po  misc.Po  nuc_code.Po  viz.Po
thirdPartyCodes/samtools-1.2/: samtools
thirdPartyCodes/samtools-1.2/htslib-1.2.1/autom4te.cache/: output.0  requests  traces.0  traces.1
thirdPartyCodes/samtools-1.2/misc/: ace2sam  maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
thirdPartyCodes/samtools-1.2/test/: vcf-miniview
thirdPartyCodes/samtools-1.2/test/merge/: test_bam_translate  test_pretty_header  test_rtrans_build  test_trans_tbl_init
thirdPartyCodes/samtools-1.2/test/split/: test_count_rg  test_expand_format_string  test_filter_header_rg  test_parse_args
tools/: chr_reads_dist.sh  config_file.txt  fragile_bands_mouse.txt  fragile_bands_ncbi_76.txt  hit.sh  hit1.sh  summarize_rarefaction.sh  time_course_bless_genomic_j1.txt
